# AscendAI

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AGENTS.md.example  Dockerfile.mem0mcp  README.md  ascend-scrapper.docker-compose.yaml  build.gradle.kts  categorization.py  configure_mem0.sh  docker-compose.yaml  kilo.jsonc  opencode.json  openmemory_requests.http  settings.gradle.kts
AscendMemory/: .dockerignore  AGENTS.md  Ascend MCP Memory.postman_collection.json  Dockerfile  README.md  mcp_requests.http  pyproject.toml
AscendMemory/.run/: AscendMemory Build.run.xml  AscendMemory Run.run.xml  Docker Build.run.xml  Docker Run.run.xml  main.run.xml
AscendMemory/docs/: CONFIGURATION.md  README.md
AscendMemory/docs/architecture/: README.md
AscendMemory/e2e/: README.md
AscendMemory/e2e/fixtures/: README.md
AscendMemory/e2e/testing/: 1-invalid-input-test.md  2-insert-and-search-test.md  3-wipe-user-scope-test.md  4-mcp-tools-list-test.md  5-mcp-insert-and-search-test.md  README.md
AscendMemory/src/: main.py
AscendMemory/src/api/: exception_handlers.py  readiness.py
AscendMemory/src/config/: config.py  logging_config.py  startup_banner.py
AscendMemory/src/core/: config.py  memory_client.py
AscendMemory/src/observability/: metrics.py  request_context.py
AscendMemory/src/service/: memory_client.py
AscendMemory/tests/: conftest.py  test_main.py
AscendMemory/tests/api/: test_exception_handlers.py  test_readiness.py
AscendMemory/tests/config/: test_config.py  test_logging_config.py  test_startup_banner.py
AscendMemory/tests/observability/: test_metrics.py  test_request_context.py
AscendMemory/tests/service/: test_memory_client.py
AscendWebSearch/: AGENTS.md  Ascend MCP WebSearch.postman_collection.json  CHANGELOG.md  Dockerfile  README.md  mcp_requests.http  pyproject.toml  pyrightconfig.json  requirements.txt  supervisord.conf
AscendWebSearch/.run/: Docker Build.run.xml  Docker Run.run.xml  main.run.xml
AscendWebSearch/docs/: README.md  api-examples.md  configuration.md  running.md  troubleshooting.md
AscendWebSearch/docs/architecture/: README.md
AscendWebSearch/e2e/: README.md
AscendWebSearch/e2e/fixtures/: README.md
AscendWebSearch/e2e/testing/: 1-invalid-input-test.md  2-search-happy-path-test.md  3-read-example-com-test.md  4-mcp-tools-list-test.md  5-mcp-search-test.md  README.md
AscendWebSearch/src/: main.py
AscendWebSearch/src/api/: exception_handlers.py  exceptions.py  readiness.py
AscendWebSearch/src/assets/: user_agents.json
AscendWebSearch/src/config/: blocklist_loader.py  compat.py  config.py  logging_config.py  startup_banner.py
AscendWebSearch/src/core/: config.py  search_client.py  web_reader.py
AscendWebSearch/src/observability/: metrics.py  request_context.py
AscendWebSearch/src/reader/: html_utils.py  link_annotator.py  web_reader.py
AscendWebSearch/src/runtime/: browser_pool.py
AscendWebSearch/src/search/: search_client.py
AscendWebSearch/src/validator/: content_validator.py  url_validator.py
AscendWebSearch/tests/: conftest.py  test_lifespan.py  test_main.py
AscendWebSearch/tests/api/: test_exception_handlers.py  test_readiness.py
AscendWebSearch/tests/config/: test_blocklist_loader.py  test_compat.py  test_config.py  test_logging_config.py  test_startup_banner.py
AscendWebSearch/tests/observability/: test_request_context.py
AscendWebSearch/tests/reader/: test_link_annotator.py  test_strategies.py  test_web_reader.py
AscendWebSearch/tests/runtime/: test_browser_pool.py
AscendWebSearch/tests/search/: test_search_client.py
AscendWebSearch/tests/validator/: test_content_validator.py  test_url_validator.py
AudioScribe/: .dockerignore  AGENTS.md  Ascend MCP AudioScribe.postman_collection.json  AudioScribe MCP.postman_collection.json  Dockerfile  Dockerfile.mcp  README.md  main.py  mcp_requests.http  mcp_server.py  mcp_sse_requests.http  pyproject.toml  pytorch-requirements.txt  requirements-dev.txt  requirements.txt
AudioScribe/.run/: AudioScribe Build only.run.xml  AudioScribe Build.run.xml  AudioScribe Run local HF cache.run.xml  AudioScribe Run local.run.xml  AudioScribe Run.run.xml  AudioScribe.run.xml  AudioScribeMCP Build.run.xml  AudioScribeMCP Run.run.xml  AudioScribeMCP.run.xml  Build only.run.xml  Run local HF cache.run.xml  Run local.run.xml  main.run.xml  mcp_requests _ health.run.xml  mcp_requests _ initialize.run.xml  mcp_requests _ list_tools.run.xml  mcp_requests _ sse_connect.run.xml  mcp_requests _ sse_health.run.xml  mcp_requests _ sse_initialize.run.xml  mcp_requests _ sse_list_tools.run.xml  mcp_requests _ sse_transcribe_hf.run.xml  mcp_requests _ sse_transcribe_local.run.xml  mcp_requests _ sse_transcribe_local_with_timestamps.run.xml  mcp_requests _ sse_transcribe_openai.run.xml  mcp_requests _ transcribe_hf.run.xml  mcp_requests _ transcribe_local.run.xml  mcp_requests _ transcribe_local_with_timestamps.run.xml  mcp_requests _ transcribe_openai.run.xml
AudioScribe/e2e/: README.md
AudioScribe/e2e/fixtures/: README.md
AudioScribe/e2e/testing/: 1-invalid-input-test.md  2-transcribe-openai-test.md  3-transcribe-hf-test.md  4-mcp-tools-list-test.md  5-mcp-transcribe-test.md  README.md
AudioScribe/src/: main.py  scribe.py
AudioScribe/src/adapters/: download_file_manager.py  download_service.py  file_service.py
AudioScribe/src/api/: exception_handlers.py  readiness.py
AudioScribe/src/config/: config.py  constants.py  logging_config.py  settings.py  startup_banner.py
AudioScribe/src/io/: download_service.py  file_service.py
AudioScribe/src/observability/: metrics.py  request_context.py
AudioScribe/src/transcription/: audacity_parser.py  audio_chunker.py  conversation_merger.py  local_speech_to_text.py  (+3 more)
AudioScribe/tests/: conftest.py  test_main.py  test_mcp_server.py  test_scribe.py
PaddleOCR/: .dockerignore  AGENTS.md  Dockerfile  README.md  mcp_requests.http  pyproject.toml
PaddleOCR/docs/: CONFIGURATION.md  README.md
PaddleOCR/e2e/: README.md
PaddleOCR/src/: main.py
PaddleOCR/tests/: conftest.py  test_main.py
(+1075 files in other folders)
