[project]
name = "ascend-memory"
version = "0.1.0"
description = "AscendAI Memory Service (MCP + REST)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "mem0ai==1.0.3",
    "fastmcp==2.14.4",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9", # for file uploads if needed, or form data
    "qdrant-client==1.16.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "black",
    "isort"
]

[tool.setuptools]
packages = ["src"]
