[project]
name = "ascend-memory"
version = "0.1.0"
description = "AscendAI Memory Service (MCP + REST)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "mem0ai==2.0.4",
    "fastmcp==3.3.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "httpx==0.28.1",
    "qdrant-client==1.16.2",
    "colorlog==6.10.1",
    "prometheus-client==0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "asgi-lifespan==2.1.0",
    "ruff==0.15.15",
    "mypy==2.1.0",
    "pyright==1.1.408"
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportUntypedFunctionDecorator = false
reportUnusedFunction = false

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportPrivateUsage = false
reportUnknownLambdaType = false
reportArgumentType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportGeneralTypeIssues = false
reportUntypedFunctionDecorator = false
reportAttributeAccessIssue = false

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "S", "B", "A", "RUF", "SIM", "PL",
    "C4",
    "RET",
    "PIE",
    "TRY",
    "PERF",
    "ARG",
    "LOG",
    "G",
    "T20",
    "ERA",
    "PT",
    "PTH",
    "FA",
    "TCH",
    "DTZ",
    "ICN",
    "Q",
    "TID",
    "INT",
    "SLF",
    "ASYNC",
    "FURB",
]
ignore = [
    "S101",
    "PLR0913",
    "N818",
    "BLE001",
    "S110",
    "PLR2004",
    "S104",
    "S311",
    "PLR0911",
    "PLC0415",
    "G004",
    "TRY003",
    "TRY300",
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", "S105", "S106", "PLR2004",
    "SIM117",
    "RUF059",
    "B010",
    "E501",
    "PLR1711",
    "PLE2502",
    "ARG001",
    "ARG002",
    "ARG005",
    "SLF001",
    "TC002",
]
"tests/conftest.py" = [
    "E402",
    "PT022",
    "I001",
    "S101", "S105", "S106", "PLR2004",
    "SIM117",
    "RUF059",
    "B010",
    "E501",
    "PLR1711",
    "PLE2502",
    "ARG001",
    "ARG002",
    "ARG005",
    "SLF001",
    "TC002",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = false
disable_error_code = ["no-untyped-call", "type-arg"]

[[tool.mypy.overrides]]
module = [
    "mem0.*",
    "qdrant_client.*",
    "colorlog.*",
    "fastmcp.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.setuptools]
packages = ["src"]
