[project]
name = "ascend-web-search"
version = "0.1.0"
description = "AscendAI Web Search & Extraction Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "fastmcp==2.14.5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.1",
    "trafilatura>=2.0.0",
    "playwright==1.58.0",
    "beautifulsoup4==4.14.3",
    "textstat>=0.7.12",
    "crawlee[playwright]>=1.3.1",
    "playwright-stealth==2.0.1",
    "adblockparser>=0.7.0",
    "colorlog==6.10.1"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "asgi-lifespan",
    "black",
    "isort"
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.setuptools]
packages = ["src"]
