[project]
name = "ascend-web-search"
version = "0.1.0"
description = "AscendAI Web Search & Extraction Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "fastmcp==2.14.5",
    "pydantic==2.11.10",
    "pydantic-settings==2.12.0",
    "httpx==0.28.1",
    "trafilatura>=2.0.0",
    "playwright==1.58.0",
    "beautifulsoup4==4.14.3",
    "textstat>=0.7.12",
    "crawlee[playwright]>=1.3.1",
    "playwright-stealth==2.0.1",
    "adblockparser>=0.7.0",
    "colorlog==6.10.1",
    "parsel==1.11.0",
    "jaro-winkler==2.0.3",
    "lxml==6.0.2",
    "cssselect==1.4.0",
    "scikit-learn>=1.8.0",
    "curl_cffi>=0.7.4",
    "undetected-playwright>=0.3.0",
    "redis>=5.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
    "asgi-lifespan==2.1.0",
    "black==26.1.0",
    "isort==7.0.0"
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.setuptools]
packages = ["src"]
