[project]
name = "ascend-web-search"
version = "0.1.0"
description = "AscendAI Web Search & Extraction Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "fastmcp==3.3.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "httpx==0.28.1",
    "trafilatura>=2.0.0",
    "playwright==1.60.0",
    "beautifulsoup4==4.14.3",
    "textstat==0.7.13",
    "crawlee[playwright,adaptive-crawler,parsel,beautifulsoup]>=1.3.1",
    "playwright-stealth==2.0.3",
    "adblockparser>=0.7.0",
    "colorlog==6.10.1",
    "lxml==6.1.1",
    "cssselect==1.4.0",
    "curl_cffi==0.15.0",
    "redis==8.0.0",
    "tldextract==5.3.0",
    "prometheus-client==0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "asgi-lifespan==2.1.0",
    "ruff==0.15.15",
    "mypy==2.1.0"
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "S", "B", "A", "RUF", "SIM", "PL",
    "C4",   # flake8-comprehensions: simpler list/dict comprehensions
    "RET",  # flake8-return: redundant returns, missing else
    "PIE",  # flake8-pie: misc small improvements
    "TRY",  # tryceratops: exception-handling antipatterns
    "PERF", # Perflint: performance antipatterns
    "ARG",  # flake8-unused-arguments
    "LOG",  # flake8-logging: logger misuse
    "G",    # flake8-logging-format: f-string vs %-style in log calls
    "T20",  # flake8-print: no stray print statements
    "ERA",  # eradicate: commented-out code
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "FA",   # flake8-future-annotations
    "PIE",  # flake8-pie
    "TCH",  # flake8-type-checking
    "DTZ",  # flake8-datetimez: naive datetimes
    "ICN",  # flake8-import-conventions
    "Q",    # flake8-quotes
    "TID",  # flake8-tidy-imports
    "INT",  # flake8-gettext
    "SLF",  # flake8-self
    "ASYNC",# flake8-async
    "FURB", # refurb
]
ignore = [
    "S101",    # asserts are fine in tests; per-file ignore below
    "PLR0913", # max args; pydantic models / handlers legitimately exceed 5
    "N818",    # exception classes named "Exception" - renaming is a cross-cutting break here
    "BLE001",  # blind except Exception is intentional on cleanup / fallback paths
    "S110",    # try/except/pass on best-effort cleanup
    "PLR2004", # tolerate small magic numbers; they're far less harmful than over-naming
    "S104",    # binding 0.0.0.0 is the deliberate posture for a container service
    "S311",    # random for viewport jitter / UA rotation is not security-sensitive
    "PLR0911", # too-many-returns; happy on guard-clause heavy functions
    "PLC0415", # import-not-at-top is required for the compat shim load order
    "G004",    # f-strings in logger.x — readable and perf-equivalent at our log levels
    "TRY003",  # raise with message — forcing per-message Exception subclasses is overkill
    "TRY300",  # try/else split — often hurts readability for short happy paths
    "TRY301",  # raise inside try — intentional pattern in strategy escalation
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", "S105", "S106", "PLR2004",
    "SIM117",   # nested `with` mocks are clearer than one combined block
    "RUF059",   # factory tuple-unpacks intentionally leave some names unused
    "B010",     # setattr on instances is fine in test setup
    "E501",     # tabular fixture / table data crosses the line cap
    "PLR1711",  # bare returns in test stubs are explicit
    "PLE2502",  # security tests intentionally use CR/LF and bidi codepoints
    "ARG001",   # pytest fixtures and stub callbacks legitimately take unused args
    "ARG002",   # mock method overrides keep the original signature
    "ARG005",   # lambda kwarg shims for stub callables
    "SLF001",   # tests intentionally inspect / mutate private members
    "TC002",    # tests don't need TYPE_CHECKING guards for fixture imports
]
"src/config/compat.py" = ["BLE001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = false
# Tame two strict-mode rules that fight third-party libraries (crawlee / redis /
# playwright_stealth) without typed stubs. Internal code still has to be typed —
# the rest of the strict flags remain on.
disable_error_code = ["no-untyped-call", "type-arg"]

[[tool.mypy.overrides]]
module = [
    "crawlee.*",
    "playwright.*",
    "playwright_stealth.*",
    "trafilatura.*",
    "curl_cffi.*",
    "textstat.*",
    "adblockparser.*",
    "colorlog.*",
    "browserforge.*",
    "fastmcp.*",
    "tldextract.*",
    "prometheus_client.*"
]
ignore_missing_imports = true

[tool.setuptools]
packages = ["src"]
