[project]
name = "audio-scribe"
version = "0.8.0"
description = "A dynamic speech-to-text service supporting local, OpenAI, and Hugging Face models."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "anyio==4.12.1",
    "fastmcp==2.14.5",
    "faster-whisper==1.2.1",
    "httpx==0.28.1",
    "huggingface-hub>=0.23.0",
    "openai==2.17.0",
    "pydantic==2.11.10",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pydub==0.25.1",
    "coloredlogs==15.0.1",
    "colorlog==6.10.1",
    "uvicorn==0.40.0",
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.3.0",
    "asgi-lifespan==2.1.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src",
]
asyncio_mode = "auto"
