[project]
name = "paddle-ocr-service"
version = "0.1.0"
description = "PaddleOCR FastAPI + FastMCP OCR Service"
requires-python = ">=3.11"
dependencies = [
    "paddlepaddle==3.3.0",
    "paddleocr==3.4.0",
    "fastapi==0.134.0",
    "fastmcp==3.0.2",
    "uvicorn==0.41.0",
    "python-multipart==0.0.22",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "colorlog==6.10.1",
    "aiofiles==25.1.0",
    "Pillow==12.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "asgi-lifespan==2.1.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.setuptools]
packages = ["src"]
