[project]
name = "paddle-ocr-service"
version = "0.1.0"
description = "PaddleOCR FastAPI + FastMCP OCR Service"
requires-python = ">=3.11"
dependencies = [
    "paddlepaddle==3.3.1",
    "paddleocr==3.6.0",
    "fastapi==0.136.3",
    "fastmcp==3.3.1",
    "uvicorn==0.48.0",
    "python-multipart==0.0.29",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "colorlog==6.10.1",
    "python-json-logger==4.1.0",
    "aiofiles==25.1.0",
    "aiohttp==3.13.5",
    "Pillow==12.2.0",
    "slowapi==0.1.9",
    "prometheus-fastapi-instrumentator==8.0.0",
    "prometheus-client==0.25.0",
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-instrumentation-fastapi==0.63b1",
    "opentelemetry-instrumentation-aiohttp-client==0.63b1",
    "opentelemetry-exporter-otlp==1.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "asgi-lifespan==2.1.0",
    "httpx==0.28.1",
    "ruff==0.15.15",
    "mypy==2.1.0",
    "types-aiofiles==25.1.0.20260518",
    "mutmut==3.5.0",
    "pact-python==3.4.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
    "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/__init__.py", "src/**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "S",
    "PL",
    "ASYNC",
]
ignore = [
    "S101",
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S110", "PLR2004", "PLR0915", "PLR0913"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["paddleocr.*", "fastmcp.*", "slowapi.*", "prometheus_fastapi_instrumentator.*"]
ignore_missing_imports = true

[tool.mutmut]
paths_to_mutate = "src/"
runner = "pytest -x --no-cov -q"
tests_dir = "tests/"

[tool.setuptools]
packages = ["src", "src.api", "src.api.mcp", "src.api.rest", "src.api.middleware", "src.config", "src.model", "src.observability", "src.service"]
